--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio",
-  "homepage": "https://luanacassiaf.github.io/portfolio/",
+  "name": "resume",
+  "homepage": "https://luanacassiaf.github.io/resume/",
   "version": "0.0.0",
   "private": true,
   "type": "module",
